@@ -13,6 +13,7 @@
     ADDED: new krarc (password handling, type autodetection, writing
            out archiver error messages, step into hidden archives,...)
 
+    FIXED: [ 984936 ] Wrong file cursor position when entering protected directory
     FIXED: [ 1232507 ] panel focus change problems at using the keyboard
     FIXED: bookmark separators get corrupted after adding a new bookmark
     FIXED: [ 1116161 ] more detailed error message at opening FTP URLs  via HTTP proxy
